--- a/views/iniciarsesion.ejs
+++ b/views/iniciarsesion.ejs
@@ -1,15 +1,13 @@
-<!doctype html>
-<html class="no-js" lang="zxx">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
-
-	<!-- CSS here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/stylesheets/css/registro.css">
+    <title>Registrate en Wasser</title>
+    <link rel="icon" type="image/jpg" href="img/waseer.jfif">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
@@ -25,18 +23,19 @@
 	<link rel="stylesheet" href="stylesheets/css/nice-select.css">
 	<link rel="stylesheet" href="stylesheets/css/style.css">
 </head>
-<body><!-- Preloader Start -->
-       <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <img src="stylesheets/img/logo/loder.png" alt="">
-                </div>
+<div id="preloader-active">
+    <div class="preloader d-flex align-items-center justify-content-center">
+        <div class="preloader-inner position-relative">
+            <div class="preloader-circle"></div>
+            <div class="preloader-img pere-text">
+                <img src="stylesheets/img/logo/loder.png" alt="">
             </div>
         </div>
     </div>
-    
+</div>
+<body>
+       
+    <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
         <div class="header-area">
@@ -87,7 +86,7 @@
                                                 </li>
                                             
 
-                                                    <li><a  id="navbarDropdown3" role="button" href="/carrito"
+                                                    <li><a href="/carrito" id="navbarDropdown3" role="button"
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
@@ -134,94 +133,41 @@
         </div>
         <!-- Header End -->
     </header>
-    <main>
-        <!--? slider Area Start-->
-        <div class="slider-area position-relative">
-            <div class="slider-active">
-                <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
-                                <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>compra!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontra lo que buscas entre miles de productos nuevos y usados!</p>
-                                    <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a>
 
-                                   
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
-                <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
-                                <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Publica y vende!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Publica y vende tus productos de griferia nuevos o usados!</p>
-                                    <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
-            </div>
+<body>
+
+
+    <section class="form-register2">
+        <h4>Iniciar Sesión</h4>
+        <input class="controlls2" type="email" name="correo" id="correo" placeholder="Ingrese su Correo" required>
+        <input class="controlls2" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña" required>   
+        <section class="form-register">
             
-        </div>
-        <!-- slider Area End-->
+            
+            
+             <input class="botons" type="submit" value="Iniciar Sesión">
+             <p><a href="/recuperar">Olvide mi contraseñá</a></p>
         
-        <!--? Gallery Area Start -->
-        <div class="gallery-area">
-            <div class="container-fluid p-0 fix">
-                <div class="row no-gutters">
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-gallery text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery1.png);"></div>
-                            <div class="thumb-content-box">
-                                <div class="thumb-content">
-                                    <h3>Todo para tu baño</h3>
-                                    <p>Queres renovar tu cuarto de baño o ya lo hiciste y no sabes que hacer con los viejos artefactos? visita la categoria y compra y vende TODO!</p>
-                                    <a href="services.html">Categoria Baño</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-gallery no-margin text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery2.png);"></div>
-                            <div class="thumb-content-box">
-                                <div class="thumb-content">
-                                    <h3>Todo Para tu cocina</h3>
-                                    <p>La griferia que siempre soñaste para tu cocina con una pequeña variedad de artefactos para acompañar! Tambien si tenes algo que te sobre lo podes publicar!</p>
-                                    <a href="services.html">Categoria Cocina</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-gallery text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery3.png);"></div>
-                            <div class="thumb-content-box">
-                                <div class="thumb-content">
-                                    <h3>Griferia General</h3>
-                                    <p>Desde filtros para piletas de jardin pasando por canillas externas hasta bachas de diseño! De aca salis comprando!</p>
-                                    <a href="services.html">Categoria Griferia Gral.</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Gallery Area End -->
-        </main>
-<footer>
-                                <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-                            </div>
-                          </footer>
+    </section>
+
+
+    
+
+
+
+
+
+
+
+
+
+
+    
+       
+ 
+        
+    </section>
+
                             
     <!-- search model begin -->
     <div class="search-model-box" style="display: none;">
