--- a/views/recuperar.ejs
+++ b/views/recuperar.ejs
@@ -1,15 +1,13 @@
-<!doctype html>
-<html class="no-js" lang="zxx">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
-
-	<!-- CSS here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/stylesheets/css/registro.css">
+    <title>Registrate en Wasser</title>
+    <link rel="icon" type="image/jpg" href="img/waseer.jfif">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;1,200&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
 	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
@@ -25,8 +23,10 @@
 	<link rel="stylesheet" href="stylesheets/css/nice-select.css">
 	<link rel="stylesheet" href="stylesheets/css/style.css">
 </head>
-<body><!-- Preloader Start -->
-       <div id="preloader-active">
+<body>
+       
+    <!-- Preloader Start -->
+    <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
@@ -36,7 +36,6 @@
             </div>
         </div>
     </div>
-    
     <header>
         <!-- Header Start -->
         <div class="header-area">
@@ -87,7 +86,7 @@
                                                 </li>
                                             
 
-                                                    <li><a  id="navbarDropdown3" role="button" href="/carrito"
+                                                    <li><a href="/carrito" id="navbarDropdown3" role="button"
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
@@ -134,111 +133,54 @@
         </div>
         <!-- Header End -->
     </header>
-    <main>
-        <!--? slider Area Start-->
-        <div class="slider-area position-relative">
-            <div class="slider-active">
-                <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
-                                <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>compra!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontra lo que buscas entre miles de productos nuevos y usados!</p>
-                                    <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a>
 
-                                   
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
-                <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
-                                <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Publica y vende!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Publica y vende tus productos de griferia nuevos o usados!</p>
-                                    <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
-            </div>
+<body>
+
+
+    <section class="form-register2">
+        <h4>Olvide mi contraseña</h4>
+        <input class="controlls2" type="email" name="correo" id="correo" placeholder="Ingrese su Correo" required>
+        <section class="form-register">
             
-        </div>
-        <!-- slider Area End-->
+            
+            
+             
+             <p><a input class="botons" type="submit" href="/">Recuperar</a></p>
         
-        <!--? Gallery Area Start -->
-        <div class="gallery-area">
-            <div class="container-fluid p-0 fix">
-                <div class="row no-gutters">
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-gallery text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery1.png);"></div>
-                            <div class="thumb-content-box">
-                                <div class="thumb-content">
-                                    <h3>Todo para tu baño</h3>
-                                    <p>Queres renovar tu cuarto de baño o ya lo hiciste y no sabes que hacer con los viejos artefactos? visita la categoria y compra y vende TODO!</p>
-                                    <a href="services.html">Categoria Baño</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-gallery no-margin text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery2.png);"></div>
-                            <div class="thumb-content-box">
-                                <div class="thumb-content">
-                                    <h3>Todo Para tu cocina</h3>
-                                    <p>La griferia que siempre soñaste para tu cocina con una pequeña variedad de artefactos para acompañar! Tambien si tenes algo que te sobre lo podes publicar!</p>
-                                    <a href="services.html">Categoria Cocina</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-gallery text-center">
-                            <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery3.png);"></div>
-                            <div class="thumb-content-box">
-                                <div class="thumb-content">
-                                    <h3>Griferia General</h3>
-                                    <p>Desde filtros para piletas de jardin pasando por canillas externas hasta bachas de diseño! De aca salis comprando!</p>
-                                    <a href="services.html">Categoria Griferia Gral.</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Gallery Area End -->
-        </main>
-<footer>
-                                <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-                            </div>
-                          </footer>
-                            
-    <!-- search model begin -->
-    <div class="search-model-box" style="display: none;">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-btn">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Qué buscas?">
-            </form>
-        </div>
-    </div>              
-     <!-- Search model end -->   
-    <!-- Scroll Up -->
-    <div id="back-top" >
-        <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-    </div>
+    </section>
 
-    <!-- JS here -->
+
+    
+
+
+
+
+
+
+
+
+
+
+    
+       
+ 
+        
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
     <script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
     <!-- Jquery, Popper, Bootstrap -->
@@ -247,7 +189,7 @@
     <script src="stylesheets/js/bootstrap.min.js"></script>
     <!-- Jquery Mobile Menu -->
     <script src="stylesheets/js/jquery.slicknav.min.js"></script>
-
+    
     <!-- Jquery Slick , Owl-Carousel Plugins -->
     <script src="stylesheets/js/owl.carousel.min.js"></script>
     <script src="stylesheets/js/slick.min.js"></script>
@@ -255,7 +197,7 @@
     <script src="stylesheets/js/wow.min.js"></script>
     <script src="stylesheets/js/animated.headline.js"></script>
     <script src="stylesheets/js/jquery.magnific-popup.js"></script>
-
+    
     
     
     <!-- counter , waypoint,Hover Direction -->
@@ -263,13 +205,13 @@
     <script src="stylesheets/js/waypoints.min.js"></script>
     <script src="stylesheets/js/jquery.countdown.min.js"></script>
     <script src="stylesheets/js/hover-direction-snake.min.js"></script>
-
-
+    
+    
     
     <!-- Jquery Plugins, main Jquery -->	
     <script src="stylesheets/js/plugins.js"></script>
     <script src="stylesheets/js/main.js"></script>
-
     
-    </body>
+    
+</body>
 </html>
