agregado detalle productos(realizado por bucco) corrigiendo detalles de diseño (facu)

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -213,6 +213,10 @@ h6 {
   text-transform: normal;
 }
 
+h2.card-title {
+  text-align: center;
+}
+
 /* line 24, C:/Users/HP/Desktop/jun-2020/280.Industrial_HTML/assets/scss/_common.scss */
 p {
   font-family: "Muli", sans-serif;
