--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
-                                                            <li><a href="#">item 1</a></li>
+                                                            <li><a href="/producto">item 1</a></li>
                                                             <li><a href="#">item 2</a></li>
                                                             <li><a href="#">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
