--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -234,18 +234,20 @@
           <div class="col-md-4 mb-5">
             <div class="card h-100">
               <div class="card-body">
-                <h2 class="card-title">Redes</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                <h2 class="card-title">Otras Caracteristicas</h2>
+                <p class="card-text">
+                  <p> de control de la canilla: Monocomando</p>
+                  <p>Materiales: Metal</p>
+                  <p>Lugar de colocación: Mesada</p>
+                  <p>Incluye aireador: Sí</p>
+                  
               </div>
               
             </div>
           </div>
           <!-- /.col-md-4 -->
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <div class="card-body">
-                <h2 class="card-title">Medios de pago</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+          <div class="col-md-4 xl-5">
+            <img src="/stylesheets/img/items/pagos.png" alt="">
               </div>
               
             </div>
