--- a/views/carrito.ejs
+++ b/views/carrito.ejs
@@ -75,9 +75,12 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                        <li><a href="">categoria 1</a></li>
-                                                        <li><a href="">Categoria 2</a></li>
-                                                        <li><a href="">Categoria 3</a></li>
+                                                      <li><a href="">Griferia Baño</a></li>
+                                                      <li><a href="">Griferia Cocina</a></li>
+                                                      <li><a href="">Bachas</a></li>
+                                                      <li><a href="">Sanitarios</a></li>
+                                                      <li><a href="">Bañeras y Duchas</a></li>
+                                                      <li><a href="">Accesorios varios</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -86,7 +89,7 @@
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
-                                                            <li><a href="#">item 1</a></li>
+                                                            <li><a href="/producto">item 1</a></li>
                                                             <li><a href="#">item 2</a></li>
                                                             <li><a href="#">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
