--- a/views/catebanio.ejs
+++ b/views/catebanio.ejs
@@ -83,16 +83,16 @@
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
                                                         <li><a href="/catebanio">Griferia Baño</a></li>
-                                                        <li><a href="/cocina">Griferia Cocina</a></li>
+                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
                                                         <li><a href="/bachas">Bachas</a></li>
                                                         <li><a href="/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/banieras">Bañeras y Duchas</a></li>
-                                                        <li><a href="accesorios">Accesorios varios</a></li>
+                                                        <li><a href="/accesorios">Accesorios varios</a></li>
                                                     </ul>
                                                 </li>
                                             
 
-                                                    <li><a href="#"  href="#" id="navbarDropdown3" role="button"
+                                                    <li><a href="/carrito"  href="#" id="navbarDropdown3" role="button"
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
@@ -141,27 +141,38 @@
     </header>
     <main>
 
-      <!--espacio en blaco con sombra-->
+                            
+    <!-- search model begin -->
+    <div class="search-model-box" style="display: none;">
+        <div class="h-100 d-flex align-items-center justify-content-center">
+            <div class="search-close-btn">+</div>
+            <form class="search-model-form">
+                <input type="text" id="search-input" placeholder="Qué buscas?">
+            </form>
+        </div>
+    </div>              
+    <!--espacio en blaco con sombra-->
 
-      <div class="container">    
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-          </div>
+    <div class="container">    
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio2.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
         </div>
       </div>
+    </div>
 
-      <div class="container">    
+    
+    <div class="container">    
         <div class="row">
           <div class="col-sm-12">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/stylesheets/img/categoria/baner/banercategorias2.png" class="d-block w-100" alt="...">
+                  <img src="/stylesheets/img/categoria/baner2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/stylesheets/img/categoria/baner/banercategorias.png" class="d-block w-100" alt="...">
+                  <img src="/stylesheets/img/categoria/baner1.png" class="d-block w-100" alt="...">
                 </div>
                 
               </div>
@@ -176,52 +187,92 @@
             </div>
           </div>
 
-          <!--espacio en blaco-->
+       
+          <!--espacio en blaco con sombra-->
 
-          <div class="container">    
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-              </div>
-            </div>
+      <div class="container">    
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
           </div>
-                            
-    <!-- search model begin -->
-    <div class="search-model-box" style="display: none;">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-btn">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Qué buscas?">
-            </form>
         </div>
-    </div>              
-     <!-- Search model end -->   
+      </div>
+
+     
+          <!-- Search model end -->   
     <!-- Scroll Up -->
     <div id="back-top" >
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
     </div>
     <div class="container">    
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-3">
+            <div class="panel panel-primary">
+              <div class="panel-heading">Canilla Grifería Lavatorio Baño Temporizada Pressmatic</div>
+              <div class="panel-body"><a href="/producto"><img src="https://http2.mlstatic.com/canilla-griferia-lavatorio-bano-temporizada-pressmatic-D_NQ_NP_997048-MLA31032163873_062019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">$1.690.</div>
+              <div class="panel-footer">.</div>
+            </div>
+          </div>
+          <div class="col-sm-3"> 
+            <div class="panel panel-danger">
+              <div class="panel-heading">Griferia Canilla Monocomando Lavatorio De Baño Fiting Shop</div>
+              <div class="panel-body"><a href="/producto"><img src="https://http2.mlstatic.com/griferia-canilla-monocomando-lavatorio-de-bano-fiting-shop-D_NQ_NP_848355-MLA40290886792_122019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">$2.653</div>
+              <div class="panel-footer">.</div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="panel panel-primary">
+              <div class="panel-heading">Grifería Monocomando Fv Coty P/ Lavatorio Alto 181.02/d9 Cta</div>
+              <div class="panel-body"><a href="/producto"><img src="https://http2.mlstatic.com/griferia-monocomando-fv-coty-p-lavatorio-alto-18102d9-cta-D_NQ_NP_664362-MLA31115894857_062019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">$15.630</div>
+              <div class="panel-footer">.</div>
+            </div>
+          </div>
+          <div class="col-sm-3"> 
+            <div class="panel panel-success">
+              <div class="panel-heading">Grifería Lavatorio Monocomando Alta Abs Negra</div>
+              <div class="panel-body"><a href="/producto"><img src="https://http2.mlstatic.com/griferia-lavatorio-monocomando-alta-abs-negra-D_NQ_NP_683097-MLA42242400886_062020-F.webp" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">$2.860</div>
+              <div class="panel-footer">.</div>
+            </div>
+          </div>
+          
+       
+        </div>
+      </div><br>
+<!-- otros productos a agregar
+      <div class="container">    
+        <div class="row">
+          <div class="col-sm-3">
             <div class="panel panel-primary">
               <div class="panel-heading">GRIFERIA BAÑO</div>
-              <div class="panel-body"><a href="/catebanio"><img src="/stylesheets/img/categoria/griferiabanio.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-body"><a href=""><img src="https://http2.mlstatic.com/griferia-lavatorio-monocomando-alta-abs-negra-D_NQ_NP_683097-MLA42242400886_062020-F.webp" class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">Todo en griferia para tu baño.</div>
               <div class="panel-footer">.</div>
             </div>
           </div>
-          <div class="col-sm-4"> 
+          <div class="col-sm-3">
+            <div class="panel panel-primary">
+              <div class="panel-heading">GRIFERIA BAÑO</div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/griferiabanio.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">Todo en griferia para tu baño.</div>
+              <div class="panel-footer">.</div>
+            </div>
+          </div>
+          <div class="col-sm-3"> 
             <div class="panel panel-danger">
               <div class="panel-heading">GRIFERIA COCINA</div>
-              <div class="panel-body"><a href="/catecocina"><img src="/stylesheets/img/categoria/griferiacocina.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/griferiacocina.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">Todo en griferia para tu cocina.</div>
               <div class="panel-footer">.</div>
             </div>
           </div>
-          <div class="col-sm-4"> 
+          <div class="col-sm-3"> 
             <div class="panel panel-success">
               <div class="panel-heading">BACHAS</div>
-              <div class="panel-body"><a href="/bachas"><img src="/stylesheets/img/categoria/BACHAS.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/BACHAS.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">Bachas para baño, cocina, lavaderos y jardin.</div>
               <div class="panel-footer">.</div>
             </div>
@@ -229,39 +280,43 @@
         </div>
       </div><br>
 
-      
       <div class="container">    
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-3">
             <div class="panel panel-primary">
-              <div class="panel-heading">SANITARIOS</div>
-              <div class="panel-body" ><a href="/sanitarios"><img  src="/stylesheets/img/categoria/sanitarios.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-              <div class="panel-footer">Bidets e inodoros</div>
+              <div class="panel-heading">GRIFERIA BAÑO</div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/griferiabanio.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">Todo en griferia para tu baño.</div>
               <div class="panel-footer">.</div>
             </div>
           </div>
-          <div class="col-sm-4"> 
+          <div class="col-sm-3">
             <div class="panel panel-primary">
-              <div class="panel-heading">BAÑERAS Y DUCHAS</div>
-              <div class="panel-body"><a href="/banieras"><img src="/stylesheets/img/categoria/duchas.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-              <div class="panel-footer">Regaderas, Duchas, bañeras, etc</div>
+              <div class="panel-heading">GRIFERIA BAÑO</div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/griferiabanio.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">Todo en griferia para tu baño.</div>
               <div class="panel-footer">.</div>
             </div>
           </div>
-          <div class="col-sm-4"> 
-            <div class="panel panel-primary">
-              <div class="panel-heading">ACCESORIOS VARIOS</div>
-              <div class="panel-body"><a href="/accesorios"><img src="/stylesheets/img/categoria/varios.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
-              <div class="panel-footer">Complentos, muebles, espejos, etc</div>
+          <div class="col-sm-3"> 
+            <div class="panel panel-danger">
+              <div class="panel-heading">GRIFERIA COCINA</div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/griferiacocina.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">Todo en griferia para tu cocina.</div>
+              <div class="panel-footer">.</div>
+            </div>
+          </div>
+          <div class="col-sm-3"> 
+            <div class="panel panel-success">
+              <div class="panel-heading">BACHAS</div>
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/BACHAS.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-footer">Bachas para baño, cocina, lavaderos y jardin.</div>
               <div class="panel-footer">.</div>
             </div>
           </div>
         </div>
-      
-     
-
-      </div><br><br>
-
+      </div><br>
+     -->
    
     
     <!-- JS here -->
