--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,9 +80,12 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                        <li><a href="">categoria 1</a></li>
-                                                        <li><a href="">Categoria 2</a></li>
-                                                        <li><a href="">Categoria 3</a></li>
+                                                        <li><a href="/catebanio">Griferia Baño</a></li>
+                                                        <li><a href="">Griferia Cocina</a></li>
+                                                        <li><a href="">Bachas</a></li>
+                                                        <li><a href="">Sanitarios</a></li>
+                                                        <li><a href="">Bañeras y Duchas</a></li>
+                                                        <li><a href="">Accesorios varios</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -219,8 +222,7 @@
         <!-- Gallery Area End -->
         </main>
 <footer>
-                                <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
-                            </div>
+                                
                           </footer>
                             
     <!-- search model begin -->
