--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -79,9 +79,12 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                        <li><a href="">categoria 1</a></li>
-                                                        <li><a href="">Categoria 2</a></li>
-                                                        <li><a href="">Categoria 3</a></li>
+                                                        <li><a href="">Griferia Baño</a></li>
+                                                        <li><a href="">Griferia Cocina</a></li>
+                                                        <li><a href="">Bachas</a></li>
+                                                        <li><a href="">Sanitarios</a></li>
+                                                        <li><a href="">Bañeras y Duchas</a></li>
+                                                        <li><a href="">Accesorios varios</a></li>
                                                     </ul>
                                                 </li>
                                             
@@ -90,7 +93,7 @@
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                         <ul class="submenu">
                                                             
-                                                            <li><a href="#">item 1</a></li>
+                                                            <li><a href="/producto">item 1</a></li>
                                                             <li><a href="#">item 2</a></li>
                                                             <li><a href="#">item 3</a></li>
                                                             <li><a href="/carrito">IR AL CARRITO</a></li>
@@ -147,7 +150,7 @@
         <input class="controlls2" type="password" name="contraseña" id="contraseña" placeholder="Repita su Contraseña" required>   
          <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
          <input class="botons" type="submit" value="Registrar">
-         <p><a href="iniciarsesion.html">¿Ya tengo cuenta?</a></p>
+         <p><a href="iniciarsesion.html">¿Ya tenes cuenta?</a></p>
         
     </section>
 <!-- Scroll Up -->
