--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -74,7 +74,7 @@
                                           
                                           <ul id="navigation">    
                                                                                                                                    
-                                               <li><a href="/iniciarsesion">Cuenta</a>
+                                               <li><a href="#">Cuenta</a>
                                                   <ul class="submenu">
                                                       <li><a href="/registro">Registrarse</a></li>
                                                       <li><a href="/iniciarsesion">Ingresar</a></li>
@@ -84,9 +84,12 @@
                                              
                                               <li><a href="/categoria">Categorias</a>
                                                   <ul class="submenu">
-                                                      <li><a href="">categoria 1</a></li>
-                                                      <li><a href="">Categoria 2</a></li>
-                                                      <li><a href="">Categoria 3</a></li>
+                                                    <li><a href="">Griferia Baño</a></li>
+                                                    <li><a href="">Griferia Cocina</a></li>
+                                                    <li><a href="">Bachas</a></li>
+                                                    <li><a href="">Sanitarios</a></li>
+                                                    <li><a href="">Bañeras y Duchas</a></li>
+                                                    <li><a href="">Accesorios varios</a></li>
                                                   </ul>
                                               </li>
                                           
@@ -95,7 +98,7 @@
                                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
                                                       <ul class="submenu">
                                                           
-                                                          <li><a href="#">item 1</a></li>
+                                                          <li><a href="/producto">item 1</a></li>
                                                           <li><a href="#">item 2</a></li>
                                                           <li><a href="#">item 3</a></li>
                                                           <li><a href="/carrito">IR AL CARRITO</a></li>
@@ -126,7 +129,9 @@
                           </div> 
                           
                               
-                          
+                            
+                            <div class="row">
+                              <div class="col-sm-12">
                           <!-- Mobile Menu -->
                           <div class="col-12">
                               <div class="mobile_menu d-block d-lg-none"></div>
@@ -139,51 +144,34 @@
       <!-- Header End -->
   </header>
 <body>
-   
- 
-    
-      <!-- Page Content -->
-      <div class="container"> 
-        <div class="row">
-          <div class="col-md-4 mb-5">
+  <div class="container">    
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+      </div>
+    </div>
+  </div>
 
+  
+  <div class="container">    
+    <div class="row">
+      <div class="col-lg-6">
+        
+              <img src="/stylesheets/img/items/piazza emblen2.png" class="d-block w-100" alt="...">
             
-            </div>
-              </div>
-               </div>
-
-
-        <!-- Heading Row -->
-        <div class="row align-items-center my-5">
-          <div class="col-lg-7">
-            <img class="img-fluid rounded mb-4 mb-lg-0" src="img/aa.jpg" alt="">
-            <div class="slidershow middle">
-              <div class="slides">
-                
-                  <div class="slide s1">
-                      <img src="/stylesheets/img/items/piazza emblen2.png" alt="">
-                  </div>
-                  <div class="slide">
-                      <img src="img/aa2.jpg" alt="">
-                  </div>
-                  <div class="slide">
-                      <img src="img/aa3.jpg" alt="">
-                  </div>
-                  <div class="slide">
-                      <img src="img/aa4.jpg" alt="">
-                  </div>
-              </div>
-         
-
-          </div>
-            
-          </div>
+        </div>
+      
           <!-- /.col-lg-8 -->
-          <div class="col-lg-5">
+          <div class="col-lg-6">
             <h1 class="font-weight-light">Grifo de cocina monocomando Piazza Emblem 10012 cromo cromado</h1>
             <h2>$2.729</h2>
-            <input type="button" value="Color 1">
-            <input type="button" value="Color 2">
+            <label for="cantidad"><b>Color: </b></label>
+            <select name="cantidad" id="cantidad">
+                <option value="">Seleccione un color </option>
+                <option value="1">Plateado</option>
+                <option value="2">Dorado</option>
+                <option value="3">Negro</option>
+            </select>
             <p>Diseño de vanguardia, funcional y práctico El control monocomando es un sistema moderno, durable y de fácil instalación. 
             
               Consumo inteligente
@@ -195,12 +183,33 @@
                 <option value="1">2</option>
                 <option value="1">3</option>
             </select>
-            <a class="btn btn-primary" href="#">AÑADIR AL CARRITO</a>
+              <div class="container">    
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+      </div>
+    </div>
+  </div>
           </div>
           <!-- /.col-md-4 -->
         </div>
+      </div>
         <!-- /.row -->
-    
+        <div class="container">    
+          <div class="row">
+            <div class="col-sm-12">
+              <a class="btn btn-primary" href="/">Añadir al carrito</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">    
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
+            </div>
+          </div>
+        </div>
+
         <!-- Call to Action Well -->
         <h3>Descripcion Tecnica</h3>
         <div class="container">
@@ -246,9 +255,16 @@
             </div>
           </div>
           <!-- /.col-md-4 -->
-          <div class="col-md-4 xl-5">
-            <img src="/stylesheets/img/items/pagos.png" alt="">
+          
+            <div class="col-md-4 mb-2">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h2 class="card-title">Tambien puede interesarte</h2>
+                  <a href="/producto"><img src="https://http2.mlstatic.com/griferia-canilla-monocomando-lavatorio-de-bano-fiting-shop-D_NQ_NP_848355-MLA40290886792_122019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a
+                </div>
+                
               </div>
+            </div>
               
             </div>
           </div>
@@ -257,11 +273,12 @@
         <!-- /.row -->
     
       </div>
+
       <!-- /.container -->
     
       <!-- Footer -->
       <footer>
-        <p>Copyright ©2020 <a href="">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
+        <p>Copyright ©2020 <a href="/index">WASSER</a> | Made by <a href="https://www.instagram.com/sibeeriano/">Facundo Vara</a> - <a href="https://www.instagram.com/leandrobuco/">Leandro Bucco</a> - <a href="https://www.instagram.com/leandrouriell/">Uriel Turrion</a> | <a href="">Termino y condiciones</a> </p>
     </div>
   </footer>
     
