detalles de linkeo del home arreglados

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -187,7 +187,7 @@
                                 <div class="thumb-content">
                                     <h3>Todo para tu baño</h3>
                                     <p>Queres renovar tu cuarto de baño o ya lo hiciste y no sabes que hacer con los viejos artefactos? visita la categoria y compra y vende TODO!</p>
-                                    <a href="services.html">Categoria Baño</a>
+                                    <a href="/catebanio">Categoria Baño</a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                 <div class="thumb-content">
                                     <h3>Todo Para tu cocina</h3>
                                     <p>La griferia que siempre soñaste para tu cocina con una pequeña variedad de artefactos para acompañar! Tambien si tenes algo que te sobre lo podes publicar!</p>
-                                    <a href="services.html">Categoria Cocina</a>
+                                    <a href="/catecocina">Categoria Cocina</a>
                                 </div>
                             </div>
                         </div>
@@ -210,8 +210,8 @@
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
                                     <h3>Griferia General</h3>
-                                    <p>Desde filtros para piletas de jardin pasando por canillas externas hasta bachas de diseño! De aca salis comprando!</p>
-                                    <a href="services.html">Categoria Griferia Gral.</a>
+                                    <p>No dejes de visitar todas nuestras categorias para encontrar el producto que más se adapte a tus necesidades!</p>
+                                    <a href="/categoria">Todas las categorias</a>
                                 </div>
                             </div>
                         </div>
